--- a/views/personal-campaign-editor.ejs
+++ b/views/personal-campaign-editor.ejs
@@ -172,7 +172,7 @@
               <br /><br />
               <p class="base">FUND INFORMATION</p>
               <hr />
-              <p><b>Fill out your bank acccount information.</b></p>
+              <p><b>Fill out your bank account information.</b></p>
               <div class="col-md-50 position-relative">
                 <div class="col-md-10 position-relative">
                   <label class="hed" for="campaignTitle">BSB Number</label><label class="star hed">*</label>
