--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,8 +8,12 @@
         <div class="notifnav">
           <ul>
             <li><a href="#" class="notiflogo notifa">
-                <img src="/images/Cryuff.jpg" alt="">
-                <span class="notifnav-item">DashBoard</span>
+                <% if (user.profile_img==null){ %>
+                  <img src="/images/default.jpg" alt="Profile">
+                  <% } else { %>
+                    <img src="/uploads/<%=user.profile_img%>" alt="Profile">
+                    <% } %>
+                      <span class="notifnav-item">DashBoard</span>
               </a>
             </li>
 
@@ -30,20 +34,20 @@
                 <i class="fas fa-user"></i>
                 <span class="notifnav-item">Backed Campaigns</span>
               </a></li>
-              <% if(user.is_admin) { %>
-                <li><a href="/unapprovedCampaigns" class="notifa">
-                    <i class="fas fa-users"></i>
-                    <span class="notifnav-item">Approve Campaigns</span>
-                  </a></li>
-                <li><a href="/users" class="notifa">
-                    <i class="fas fa-users"></i>
-                    <span class="notifnav-item">Users</span>
-                  </a></li>
-                <li><a href="/register-admin" class="notifa">
-                    <i class="fas fa-users"></i>
-                    <span class="notifnav-item">Add Admin</span>
-                  </a></li>
-                <% } %>
+            <% if(user.is_admin) { %>
+              <li><a href="/unapprovedCampaigns" class="notifa">
+                  <i class="fas fa-users"></i>
+                  <span class="notifnav-item">Approve Campaigns</span>
+                </a></li>
+              <li><a href="/users" class="notifa">
+                  <i class="fas fa-users"></i>
+                  <span class="notifnav-item">Users</span>
+                </a></li>
+              <li><a href="/register-admin" class="notifa">
+                  <i class="fas fa-users"></i>
+                  <span class="notifnav-item">Add Admin</span>
+                </a></li>
+              <% } %>
           </ul>
         </div>
 
@@ -88,52 +92,52 @@
                       <% if(users.length==0) { %>
                         <p>No users yet</p>
                         <% } else {%>
-                          <div class="row justify-content-between">
-                            <div class="col-4">
-                              <h4>Name</h4>
+                          <div class="row justify-content-between expand">
+                            <div class="col-md-4">
+                              <h4 class="boldforName">Name</h4>
                             </div>
-                            <div class="col-4">
-                              <h4>Email</h4>
+                            <div class="col-md-4">
+                              <h4 class="boldforName">Email</h4>
                             </div>
-                            <div class="col-1 me-4">
-                              <h4>View</h4>
+                            <div class="col-md-1 me-5">
+                              <h4 class="boldforName">View</h4>
                             </div>
-                            <div class="col-1 me-4">
-                              <h4>Delete</h4>
+                            <div class="col-md-1 ms-0 me-4 ">
+                              <h4 class="boldforName">Delete</h4>
                             </div>
-
-
 
                             <% for (let i=0; i < users.length; i++) { %>
                               <div class="row justify-content-between">
-                                <div class="col-4">
+                                <div class="col-md-4">
                                   <%=users[i].name%>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-md-4">
                                   <%=users[i].email%>
                                 </div>
-                                <form class="mb-1 mt-1 me-2 col-1" action="/admin" method="post">
-                                  <button type="submit" class="btn btn-dark">View</button>
-                                </form>
-                                <form class="mb-1 mt-1 me-2 col-1" action="/admin/deleteUser/<%=users[i].email%>"
-                                  method="post">
-                                  <button type="submit" class="btn btn-dark ">Delete</button>
-                                </form>
+                                <div class="col-md-1 me-4">
+                                  <form class="mb-1 mt-1" action="/admin" method="post">
+                                    <button type="submit" class="btn btn-dark">View</button>
+                                  </form>
+                                </div>
+                                <div class="col-md-1 me-4">
+                                  <form class="mb-1 mt-1" action="/admin/deleteUser/<%=users[i].email%>" method="post">
+                                    <button type="submit" class="btn btn-dark">Delete</button>
+                                  </form>
+                                </div>
                               </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-12">
-                              <hr>
-                            </div>
+                              <div class="row">
+                                <div class="col-12">
+                                  <hr>
+                                </div>
+                              </div>
+                              <% } %>
+
                           </div>
                           <% } %>
-
                     </div>
-                    <% } %>
                   </div>
                 </div>
               </div>
-            </div>
           </section>
         </section>
       </div>
