--- a/public/css/unapproved-campaigns.css
+++ b/public/css/unapproved-campaigns.css
@@ -239,7 +239,7 @@ body{
 }
 
 .dashss{
-    color: red;
+    color: rgb(255, 0, 0);
 } 
 
 .unapproved-dropdown {
@@ -257,3 +257,153 @@ body{
 .unapproved-dropdown:hover .unapproved-dropdown-menu {
   display: block;
 }
+.borderInfo{
+  background-color: #f5f5f5;
+  padding: 15px; /* Increase padding for more space inside the box */
+  margin: 10px; /* Increase margin for better spacing between boxes */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adjust box shadow for a subtle effect */
+  border: 2px solid #ccc; /* Add a solid border */
+  border-radius: 5px; 
+  width: 98%;
+}
+
+.borderInfo:hover {
+  transform: scale(1.05); /* Increase size on hover */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Adjust box shadow on hover */
+}
+
+
+
+.padID{
+  /* background-color: violet; */
+  width: 9%;
+  text-align: left;
+  font-weight: bold;
+}
+.padTitle{
+  /* background-color: red; */
+  width: 20%;
+  text-align: left;
+  font-weight: bold;
+
+
+}
+
+.padCreator{
+  /* background-color: rgb(255, 0, 225); */
+  width: 20%;
+  text-align: left;
+  padding-left: 2%;
+  font-weight: bold;
+
+
+}
+
+.padView{
+  /* background-color: rgb(0, 106, 255); */
+  width: 14%;
+  text-align: left;
+
+}
+
+.padDocuments{
+  /* background-color: aqua; */
+  width: 12%;
+  text-align: left;
+
+}
+
+.padApprove{
+  /* background-color: rgb(255, 247, 0); */
+  width: 10%;
+  text-align: left;
+
+}
+
+.padDecline{
+  /* background-color: rgb(174, 0, 255); */
+  width: 10%;
+  text-align: left;
+
+}
+
+.viewButtonApprove{
+  background-color: green;
+  width: 100%;
+  height: 80%;
+  font-weight: bold;
+}
+
+.viewButtonApprove:hover{
+  background-color: rgb(0, 252, 0);
+  color: rgb(0, 0, 0);
+}
+
+
+.viewButtonDecline{
+  background-color: rgb(170, 0, 0);
+  width: 100%;
+  height: 80%;
+  font-weight: bold;
+}
+
+.viewButtonDecline:hover{
+  background-color: rgb(252, 0, 0);
+  color: rgb(0, 0, 0);
+}
+
+.viewButton{
+  margin-left: 25%;
+  width: 70%;
+  height: 80%;
+  font-weight: bold;
+  padding-top: 5px;
+  
+}
+
+.viewButton:hover{
+  background-color: rgb(255, 0, 0);
+  color: black;
+}
+
+.emailLeft{
+  padding-left: 1%;
+}
+
+.creatorh4{
+  padding-left: 9%;
+}
+
+.viewh4{
+  padding-left: 16%;
+}
+
+.docButton{
+  margin-left: 4%;
+  margin-right: 40%;
+  width: 100%;
+  height: 90%;
+  font-weight: bold;
+  background-color: #000;
+  color: white;
+  /* border: 2px solid; */
+
+}
+
+.docButton:hover{
+  background-color: rgb(255, 0, 0);
+  color: black;
+}
+
+
+.approveButtonCheck{
+  padding-left: 5%;
+}
+
+.hedsUp{
+  font-weight: bold;
+  color: #005571;
+}
+
+
+
