--- a/views/MyCampaigns.ejs
+++ b/views/MyCampaigns.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('head.ejs', { title: 'Notifications' , stylesheet: '/css/notif.css' }) %>
+<%- include('head.ejs', { title: 'Profile' , stylesheet: '/css/notif.css' }) %>
 
   <body>
     <%- include('navbar.ejs', { user: user }) %>
@@ -9,7 +9,8 @@
           <ul>
             <li>
               <a href="#" class="notiflogo notifa">
-                <img src="/images/Cryuff.jpg" alt="">
+
+                <img src="/images/notif/default.jpg" alt="Profile">
                 <span class="notifnav-item ">Dashboard</span>
               </a>
             </li>
@@ -65,7 +66,7 @@
               </h3>
             </div>
             <div>
-              <a href="/edit-profile" class="btn btn-sm btn-dark my-4">Edit Profile</a>
+              <a href="/edit-profile" class="btn btn-sm btn-dark my-4 editProfileButton">Edit Profile</a>
             </div>
           </div>
           <section class="main-course">
@@ -82,7 +83,7 @@
                           <% for (let j=i; j < i + 3 && j < campaigns.length; j++) { %>
 
                             <div class="col-md-4 mb-lg-5 mr ">
-                              <div class="card">
+                              <div class="card fixSize">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                   <div class="campaign-info">
                                     <div class="card-img-container">
@@ -103,6 +104,9 @@
 
                                       <a href="/campaign/prelaunch/<%= campaigns[j].id %>"
                                         class="btn btn-dark mb-2 mt-2">Learn More</a>
+                                      <a href="/campaign/edit/prelaunch/<%= campaigns[j].id %>"
+                                        class="btn btn-dark mb-2 mt-2">Edit</a>
+                                      <a href="/delete/<%= campaigns[j].id %>" class="btn btn-dark mb-2 mt-2">Delete</a>
                                       <p class="text-center fs-sm-5">
                                         <i class="fas fa-thumbs-up " style="padding-right:.2rem;"></i>
                                         <%= campaigns[j].no_followers %>
@@ -117,9 +121,11 @@
 
 
                                         <a href="/campaign/personal/<%= campaigns[j].id %>"
-                                          class="btn btn-dark mb-2 mt-2">Learn More</a>
-
-
+                                          class="btn btn-dark mb-2 mt-2 ">Learn More</a>
+                                        <a href="/campaign/edit/personal/<%= campaigns[j].id %>"
+                                          class="btn btn-dark mb-2 mt-2 ">Edit</a>
+                                        <button class="btn btn-dark mb-2 mt-2 open-button"
+                                          onclick="openForm(<%= campaigns[j].id %>)"> Delete</button>
                                         <div class="row">
                                           <p class="col-2 fs-sm-5 d-flex align-items-center">
                                             <i class="fas fa-thumbs-up " style="padding-right:.2rem;"></i>
@@ -156,7 +162,20 @@
             </div>
           </section>
         </section>
+
+        <div class="form-popup" id="myForm">
+          <form class="form-container" method="POST" action="/profile/delete">
+            <h3>Delete Campaign</h3>
+            <p>Are you sure you want delete your campaign?</p>
+            <div class=" d-flex row">
+              <input type="hidden" name="cid" id="cid">
+              <button type="submit" class="col-4 btn btn-success m-3">Delete</button>
+              <button type="button" class="col-4 btn btn-danger m-3" onclick="closeForm()">Cancel</button>
+            </div>
+          </form>
+        </div>
       </div>
+
 
 
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -167,6 +186,18 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+      <script>
+        function openForm(campaignId) {
+          document.getElementById("myForm").style.display = "block";
+          document.getElementById("cid").value = campaignId;
+        }
+
+        function closeForm() {
+          document.getElementById("myForm").style.display = "none";
+        }
+      </script>
+      </script>
   </body>
+
 
 </html>
