--- a/views/donation.ejs
+++ b/views/donation.ejs
@@ -12,23 +12,24 @@
 <body>
 
   <%- include('navbar.ejs', { user: user }) %>
-  <div>
-   
-    </div>
     <form id="donation-button" action="/donation/submit-donation" method="POST">
       <div class="paybcontainer">
         <div class="popup">
-          <input class="d-none" value="<%=campaignId%>"><br>
+          <h3></h3>
+          <input name="campaignId" class="d-none" value="<%=campaignId%>"><br>
           <label class="bolded" for="TkAmount">Enter the Amount: </label>
           <input class="inputts" type="number" name="donation" id="don" placeholder="100">
           <label class="bolded" for="Teka">Tk</label>
+
           <button type="submit" class="paybtn" @click="toggleDonor">Pay</button>
+          <button type="button" class="dangerbtn"><a href="/campaign/personal/<%= campaignId %>">Cancel</a></button>
+
         </div>
       </div>
     </form>
 
     <script>
-      const cid = '<%= campaignId %>';
+      const cid = "<%=campaignId%>";
       new Vue({
         el: '#app',
         data: {
