--- a/views/edit-profile.ejs
+++ b/views/edit-profile.ejs
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('head.ejs', { title: 'Edit Profile' , stylesheet: '/css/prelaunch.css' }) %>
+<%- include('head.ejs', { title: 'Edit Profile' , stylesheet: '/css/edit-profile.css' }) %>
 
- <body>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-   integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
-  <%-include('navbar.ejs', { user: user }) %>
-   <div class="container">
-    <div class="row justify-content-center">
-     <div class="col-6">
-      <form id="user" action="/file/submit-prelaunch" method="post" enctype="multipart/form-data">
-       <hr />
-       <p class="base"><b>Profile </b></p>
-       <hr />
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"></script>
+    <%-include('navbar.ejs', { user: user }) %>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-6">
+            <form id="user" action="/profile/submit" method="post" enctype="multipart/form-data">
+              <hr />
+              <p class="base"><b>Profile </b></p>
+              <hr />
+              <p class="para"></p>
+              <div class="col-md-50 position-relative">
+                <label class="hed" for="campaignTitle">Name</label>
 
-       <br />
-       <p class="base">Introduction</p>
-       <hr />
-       <p class="para"></p>
-       <div class="col-md-50 position-relative">
-        <label class="hed" for="campaignTitle">Name</label>
+                <input type="text" class="form-control" id="name" name="name" />
 
-        <input type="text" class="form-control" id="name" name="name" />
+                <br />
+                <label class="hed" for="description">Email</label>
+                <br>
+                <input name="email" id="email" class="emailHeight" />
+                <br />
+                <br />
+              </div>
+              <div class="col-md-50 position-relative">
+                <label class="hed" for="description">Bio</label><br>
+                <p><small>Tell a short story about yourself.</small></p>
+                <textarea name="description" id="description" cols="50" rows="6"></textarea>
+                <br />
+                <br />
 
-        <br />
-        <label class="hed" for="description">Email</label>
-        <br>
-        <input name="email" id="email" />
-        <br />
-        <br />
-       </div>
-       <div class="col-md-50 position-relative">
-        <label class="hed" for="description">Bio</label><br>
-        <p><small>Tell a short story about yourself.</small></p><br>
-        <textarea name="description" id="description" cols="50" rows="6"></textarea>
-        <br />
-        <br />
+                <label class="hed" for="main_image_url">Profile Image</label><br />
 
-        <label class="hed" for="main_image_url">Profile Image</label><br />
+                <small id="CampaignArea" class="form-text text-muted"> PNG or JPG
+                  supported.</small>
+                <input type="file" id="picture" name="file1" accept="image/*" />
+                <br />
+                <br />
 
-        <small id="CampaignArea" class="form-text text-muted"> PNG or JPG
-         supported.</small>
-        <input type="file" id="picture" name="file1" accept="image/*" />
-        <br />
-        <br />
+                <br />
+              </div>
 
-        <br />
-       </div>
-
-       <div class="justify-content-center">
-        <button class="btn btn-dark w-75" type="submit" style="margin: 20px 0px 20px 60px">
-         Submit Profile
-        </button>
-       </div>
-      </form>
-     </div>
-    </div>
-   </div>
-   <%-include('footer.ejs') %>
- </body>
+              <div class="justify-content-center">
+                <button class="btn btn-dark w-75 submitButton" type="submit" style="margin: 20px 0px 20px 60px">
+                  Update Profile
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <%-include('footer.ejs') %>
+  </body>
 
 </html>
