--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -8,7 +8,11 @@
         <div class="notifnav">
           <ul>
             <li><a href="#" class="notiflogo notifa">
-                <img src="/images/Cryuff.jpg" alt="">
+            <% if (user.profile_img==null){ %>
+              <img src="/images/default.jpg" alt="Profile">
+              <% } else { %>
+                <img src="/uploads/<%=user.profile_img%>" alt="Profile">
+                <% } %>
                 <span class="notifnav-item">DashBoard</span>
               </a>
             </li>
@@ -47,69 +51,78 @@
           </ul>
         </div>
 
-        <section class="main">
-
-
-
-          <div class="main-skills">
-
-            <div class="profile-card">
-              <h3 class="main-skills-h3">Name: </h3>
-              <h3 class="main-skills-Heda5">
-                <%=user.name%>
-              </h3>
-
-            </div>
-            <div class="profile-card">
-              <h3 class="main-skills-h3">Email: </h3>
-              <h3 class="main-skills-Heda5">
-                <%=user.email%>
-              </h3>
-            </div>
-
+      <section class="main">
+      
+      
+      
+        <div class="main-skills">
+      
+          <div class="profile-card">
+            <h3 class="main-skills-h3">Name: </h3>
+            <h3 class="main-skills-Heda5">
+              <%=user.name%>
+            </h3>
+      
           </div>
-
-
-          <section class="main-course">
-            <!-- <h1><b>My Story</b></h1> -->
-            <div class="course-box">
-              <ul>
-                <!-- <li class="active"><a href="Notification.html">Notifications</a></li> -->
-                <!-- <li><a href="FollowedCampaigns.html">Followed Campaigns </a></li>
-            <li><a href="DonatedCampaigns.html">Donated Campaigns</a></li> -->
-
-              </ul>
-              <div class="course">
-
-                <div class="activity-data">
-                  <div class="data names">
-                    <span class="data-title"><b class="boldName"><u></u>Notifications</b></span>
-                    <div class="col-md-12">
-                      <% if(notification.length==0) { %>
-                        <p>No notifications yet</p>
-                        <% } else {%>
-                          <% for (let i=0; i < notification.length; i++) { %>
+          <div class="profile-card">
+            <h3 class="main-skills-h3">Email: </h3>
+            <h3 class="main-skills-Heda5">
+              <%=user.email%>
+            </h3>
+          </div>
+      
+        </div>
+      
+      
+        <section class="main-course">
+          <!-- <h1><b>My Story</b></h1> -->
+          <div class="course-box">
+            <ul>
+              <!-- <li class="active"><a href="Notification.html">Notifications</a></li> -->
+              <!-- <li><a href="FollowedCampaigns.html">Followed Campaigns </a></li>
+                  <li><a href="DonatedCampaigns.html">Donated Campaigns</a></li> -->
+      
+            </ul>
+            <div class="course">
+      
+              <div class="activity-data">
+                <div class="data names">
+                  <span class="data-title"><b class="boldName"><u></u>Notifications</b></span>
+                  <div class="col-md-12">
+                    <% if(notification.length==0) { %>
+                      <p>No notifications yet</p>
+                      <% } else {%>
+                        <% for (let i=0; i < notification.length; i++) { %>
+                          <% if(notification[i].is_follow) { %>
                             <p>
-                              <%=notification[i].name%> followed your campaign <%=notification[i].title%> on
-                                  <%=notification[i].dd%> at <%=notification[i].tt%>
+                              <%=notification[i].name%> followed your campaign <b>
+                                  <%=notification[i].title%>
+                                </b> on
+                                <%=notification[i].dd%> at <%=notification[i].tt%>
                             </p>
-                            <% } %>
+                            <% } else {%>
+                              <p>
+                                <%=notification[i].name%> backed your campaign <b>
+                                    <%=notification[i].title%>
+                                  </b> by Tk <%=notification[i].amount%> on
+                                    <%=notification[i].dd%> at <%=notification[i].tt%>
+                              </p>
                               <% } %>
-                    </div>
+                                <% } %>
+                                  <% } %>
                   </div>
                 </div>
               </div>
-          </section>
+            </div>
         </section>
+      </section>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+      
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-  </body>
-
-</html>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+      </body>
+      
+      </html>
