--- a/views/register-admin.ejs
+++ b/views/register-admin.ejs
@@ -1,7 +1,17 @@
 <!doctype html>
 <html lang="en">
-<%- include('head.ejs', { title: 'Notifications' , stylesheet: '/css/register-admin.css' }) %>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/register-admin.css">
+  <title>Register Admin</title>
+  <script src=" https://cdn.jsdelivr.net/npm/vue@3.3.4/dist/vue.global.min.js "></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+</head>
 <body>
   <%- include('navbar.ejs', { user: user }) %>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -21,7 +31,7 @@
      </div>
      <div class="input-box">
       <header>Create your account</header>
-      <form id="register-form" action="/admin/register" method="POST">
+      <form id="register-form" action="/auth/admin-register" method="POST">
        <div class="form-outline mb-4">
         <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required />
        </div>
